<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/selectStatus" />

    <EditText
        android:id="@+id/text2UpdateMyStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/howRUDoing2Day" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/selectStatus" />

    <Button
        android:id="@+id/button2updateMyStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2UpdateMyStatus" />

</LinearLayout>