<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical"
	android:padding="5dp">

	<TextView android:id="@+id/userIdattop" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_gravity="center"
		android:text="@string/user_name_at_thetop" android:textAppearance="?android:attr/textAppearanceLarge" />


	<ListView android:id="@android:id/list"
		android:layout_width="match_parent" android:layout_height="0dip"
		android:layout_weight="1" android:stackFromBottom="true"
		android:transcriptMode="normal" />

	<LinearLayout android:id="@+id/linearLayout1"
		android:layout_width="match_parent" android:layout_height="wrap_content">

		<EditText android:id="@+id/writeMsg" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:hint="@string/chatHint" android:inputType="textMultiLine">

			<requestFocus />
		</EditText>

		<Button android:id="@+id/sendButton" android:layout_width="wrap_content"
	android:layout_height="wrap_content" android:text="@string/sendButton" />
	</LinearLayout>

</LinearLayout>